# godeb

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deb-tester  go.mod
cmd/deb-tester/: main.go
example/: CMakeLists.txt  Makefile  example-deb.service  main.cpp
example/scripts/: postinst  postrm  preinst  prerm
pkg/config/: config.go
pkg/installer/: installer.go
pkg/logger/: logger.go
pkg/mocker/: mocker.go
pkg/runner/: runner.go
pkg/verifier/: verifier.go
